<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fernandocs.shopping.articles.ArticlesActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <ProgressBar
        android:id="@+id/progressBarLoadArticles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/no_articles"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="vertical"
        android:layout_margin="@dimen/fab_margin"
        android:animateLayoutChanges="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabFilterMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@android:color/holo_green_dark"
            app:layout_anchor="@+id/fabFilterColor"
            android:layout_marginBottom="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_money"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabFilterColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@android:color/holo_green_dark"
            app:layout_anchor="@+id/fabFilter"
            android:layout_marginBottom="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_colorize"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_filter"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
